# sphexpansion

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  accumulate.cc  accumulate.h  basis.h  density.cc  discpotential.cc  expansion.cc  fullintegrate  fullintegrate.cc  rotcurve.cc  scaling.h  setup.cfg  setup.py  sphcoefs.h  sphmodel.h  sphorient.h  trajectory.cc  transform.h
data/: ErkalLMC.model  ErkalMW.model  SLGridSph.mw.run9mlde  disc.orient.run16mlde.smth  disc.orient.run26mldf.smth  disc.orient.run9mlde.smth  lmc.orient.run16mlde.smth  lmc.orient.run26mldf.smth  lmc.orient.run9mlde.smth  mw.orient.run16mlde.smth  mw.orient.run26mldf.smth  mw.orient.run9mlde.smth  outcoef.disc.run9mlde  simpleoutcoef.nfac.compare.disc.run26mldf  simpleoutcoef.nfac.compare.disc.run9mldf
examples/: CMakeLists.txt  Makefile  compare_discs.cc  config_flags.h.in  density_map.cc  eigenbasics.cc  eigentest.cc  extractcoefs.cc  fullintegrate.cc  fullintegrate.h  modelfiles.h  mwlmc.cc  rotcurve.cc  test_capabilities.py
examples/deprecated/: accumulate.cc  density.cc  discpotential.cc  expansion.cc  speed.cc  trajectory.cc
include/: accumulate.h  basis.h  cylcache.h  cylcoefs.h  cylexpansion.h  expansion.h  flags.h  leapfrog.h  orient.h  rotate.h  sphcache.h  sphcoefs.h  sphexpansion.h  sphmodel.h  sphorient.h  transform.h  translate.h
include/common/: basis.h  orient.h  scaling.h  transform.h  translate.h
include/cylinder/: cylcache.h  cylcoefs.h
include/sphere/: sphcache.h  sphcoefs.h  sphmodel.h
mwlmc/: __init__.py
mwlmc/plot/: __init__.py  mwlmc_plot.py
mwlmc/tutorial/: fields_tutorial.ipynb
mwlmc/util/: __init__.py  mwlmc_util.py
src/: CMakeLists.txt  fullintegrate.h  modelfiles.h  modelfilesErkal2019.h  modelfilesErkal2019m0.h  modelfilesLilleengen2023.h  modelfilesLilleengen2023m0.h  mwlmc.cc
tests/: LMCrotation.txt  MW_LMC_density.txt  MWdiscrotation.txt  MWrotation.txt  circularorbit.txt  circularorbitLMC.txt  circularorbitMW.txt  forcecurvex.txt  lmc_orbit1.txt  lmc_orbit2.txt  lmc_orbit3.txt  lmc_orbit4.txt  lmc_orbit5.txt  mw_orbit1.txt  mw_orbit2.txt  mw_orbit3.txt  mw_orbit4.txt  mw_orbit5.txt  trajectories.txt
tutorial/: fields_tutorial.ipynb  mwlmc_plot.py  mwlmc_util.py  orbits_tutorial.ipynb  tutorial_draft.ipynb
