[metadata]
name = mwlmc
author = Sophia Lilleengen and Michael S. Petersen
author_email = sophia.lilleengen@durham.ac.uk
description = Milky Way - LMC simulations
long_description = file: README.md
long_description_content_type = "text/markdown"
license = MIT
license_file = LICENSE
edit_on_github = False
github_project = sophialilleengen/mwlmc

[options]
zip_safe = False

python_requires = >=3.6
setup_requires =
    setuptools_scm
